<resources>
    <string name="app_name">homework341</string>

    <string name="language_text">change language: </string>
    <string-array name="languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string name="color_text">change color: </string>
    <string-array name="colors">
        <item>Green</item>
        <item>White</item>
        <item>Red</item>
    </string-array>

    <string name="indent_text">change color: </string>
    <string-array name="indents">
        <item>Small</item>
        <item>Middle</item>
        <item>Big</item>
    </string-array>

    <string name="save">Save </string>
    <string name="text">I\'m a terrible designer </string>
    <string name="check_box_text">lazy to translate</string>
    <string name="alert1">Внешнее хранилище не доступно</string>
    <string name="registrtion_true">регистрация прошла успешно</string>
    <string name="indication">Введите что-нибудь</string>
    <string name="entry_true">Вы вошли</string>
    <string name="OKButton">ОК</string>
    <string name="settingButton">Настройки</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="entry">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="alert2">Вход не совершен</string>
</resources>
