<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/languageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/languageChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:entries="@array/languages"/>

        <TextView
            android:id="@+id/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_text"
            android:textSize="20sp"
            android:layout_marginTop="60dp"/>

        <Spinner
            android:id="@+id/colorChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:entries="@array/colors"/>

        <TextView
            android:id="@+id/indentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indent_text"
            android:textSize="20sp"
            android:layout_marginTop="120dp"/>

        <Spinner
            android:id="@+id/indentChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:entries="@array/indents"/>

        <Button
            android:id="@+id/saveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/save"
            android:onClick="Save"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_marginTop="300dp"
            android:text="@string/text"
            android:textSize="30dp" />


    </FrameLayout>

</android.support.constraint.ConstraintLayout>